compiler/actonc/test/syntaxerrors/err14.act
# Invalid assignment target
def bad_assign():
    1 + 2 = 3